assignment1-initial/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'integer'", "'void'", "'float'", "'boolean'", 
                     "'string'", "'auto'", "'of'", "'array'", "'inherit'", 
                     "'function'", "'if'", "'else'", "'break'", "'return'", 
                     "'out'", "'for'", "'continue'", "'do'", "'while'", 
                     "'true'", "'false'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "':'", 
                     "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'::'", "'='" ]

    symbolicNames = [ "<INVALID>", "BOOLLIT", "FLOATLIT", "INTLIT", "STRINGLIT", 
                      "INTEGER", "VOID", "FLOAT", "BOOLEAN", "STRING", "AUTO", 
                      "OF", "ARR", "INHERIT", "FUNCTION", "IF", "ELSE", 
                      "BREAK", "RETURN", "OUT", "FOR", "CONTINUE", "DO", 
                      "WHILE", "TRUE", "FALSE", "COMMENT", "C_COMMENT", 
                      "ID", "LB", "RB", "SQLB", "SQRB", "DOT", "COMMA", 
                      "SEMI", "COLON", "LCB", "RCB", "ADD", "MINUS", "MUL", 
                      "DIV", "PCENT", "NOT", "AND", "OR", "SAME", "NOTSAME", 
                      "LOWER", "HIGHER", "LOWER_EQ", "HIGHER_EQ", "SCOPE", 
                      "EQ", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_varnoinit = 4
    RULE_varassign = 5
    RULE_basecase = 6
    RULE_helper = 7
    RULE_vartype = 8
    RULE_atomic_type = 9
    RULE_idlist = 10
    RULE_array = 11
    RULE_arraydecl = 12
    RULE_arrayinit = 13
    RULE_arraylit = 14
    RULE_arrayVal = 15
    RULE_arrayParam = 16
    RULE_dimension = 17
    RULE_funcdecl = 18
    RULE_inherit_part = 19
    RULE_body = 20
    RULE_paramlist = 21
    RULE_paramprime = 22
    RULE_param = 23
    RULE_stmtlist = 24
    RULE_blocklist = 25
    RULE_stmt = 26
    RULE_allowed_blockstmt = 27
    RULE_assignstmt = 28
    RULE_ifstmt = 29
    RULE_forstmt = 30
    RULE_whilestmt = 31
    RULE_dowhile_stmt = 32
    RULE_returnstmt = 33
    RULE_callstmt = 34
    RULE_continuestmt = 35
    RULE_breakstmt = 36
    RULE_blockstmt = 37
    RULE_loopstmt = 38
    RULE_scalar_variable = 39
    RULE_exprlist = 40
    RULE_expprime = 41
    RULE_expr = 42
    RULE_expr1 = 43
    RULE_expr2 = 44
    RULE_expr3 = 45
    RULE_expr4 = 46
    RULE_expr5 = 47
    RULE_expr6 = 48
    RULE_expr7 = 49
    RULE_callexpr = 50
    RULE_subexpr = 51
    RULE_indexop = 52

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "varnoinit", 
                   "varassign", "basecase", "helper", "vartype", "atomic_type", 
                   "idlist", "array", "arraydecl", "arrayinit", "arraylit", 
                   "arrayVal", "arrayParam", "dimension", "funcdecl", "inherit_part", 
                   "body", "paramlist", "paramprime", "param", "stmtlist", 
                   "blocklist", "stmt", "allowed_blockstmt", "assignstmt", 
                   "ifstmt", "forstmt", "whilestmt", "dowhile_stmt", "returnstmt", 
                   "callstmt", "continuestmt", "breakstmt", "blockstmt", 
                   "loopstmt", "scalar_variable", "exprlist", "expprime", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "callexpr", "subexpr", "indexop" ]

    EOF = Token.EOF
    BOOLLIT=1
    FLOATLIT=2
    INTLIT=3
    STRINGLIT=4
    INTEGER=5
    VOID=6
    FLOAT=7
    BOOLEAN=8
    STRING=9
    AUTO=10
    OF=11
    ARR=12
    INHERIT=13
    FUNCTION=14
    IF=15
    ELSE=16
    BREAK=17
    RETURN=18
    OUT=19
    FOR=20
    CONTINUE=21
    DO=22
    WHILE=23
    TRUE=24
    FALSE=25
    COMMENT=26
    C_COMMENT=27
    ID=28
    LB=29
    RB=30
    SQLB=31
    SQRB=32
    DOT=33
    COMMA=34
    SEMI=35
    COLON=36
    LCB=37
    RCB=38
    ADD=39
    MINUS=40
    MUL=41
    DIV=42
    PCENT=43
    NOT=44
    AND=45
    OR=46
    SAME=47
    NOTSAME=48
    LOWER=49
    HIGHER=50
    LOWER_EQ=51
    HIGHER_EQ=52
    SCOPE=53
    EQ=54
    WS=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None


      




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.decllist()
            self.state = 107
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.decl()
                self.state = 110
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varnoinit(self):
            return self.getTypedRuleContext(MT22Parser.VarnoinitContext,0)


        def varassign(self):
            return self.getTypedRuleContext(MT22Parser.VarassignContext,0)


        def array(self):
            return self.getTypedRuleContext(MT22Parser.ArrayContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.varnoinit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.varassign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarnoinitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varnoinit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarnoinit" ):
                return visitor.visitVarnoinit(self)
            else:
                return visitor.visitChildren(self)




    def varnoinit(self):

        localctx = MT22Parser.VarnoinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varnoinit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.idlist()
            self.state = 125
            self.match(MT22Parser.COLON)
            self.state = 126
            self.vartype()
            self.state = 127
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarassignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def helper(self):
            return self.getTypedRuleContext(MT22Parser.HelperContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varassign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarassign" ):
                return visitor.visitVarassign(self)
            else:
                return visitor.visitChildren(self)




    def varassign(self):

        localctx = MT22Parser.VarassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varassign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.helper()
            self.state = 130
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasecaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_basecase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasecase" ):
                return visitor.visitBasecase(self)
            else:
                return visitor.visitChildren(self)




    def basecase(self):

        localctx = MT22Parser.BasecaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_basecase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MT22Parser.ID)
            self.state = 133
            self.match(MT22Parser.COLON)
            self.state = 134
            self.vartype()
            self.state = 135
            self.match(MT22Parser.EQ)
            self.state = 136
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HelperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def helper(self):
            return self.getTypedRuleContext(MT22Parser.HelperContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def basecase(self):
            return self.getTypedRuleContext(MT22Parser.BasecaseContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_helper

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHelper" ):
                return visitor.visitHelper(self)
            else:
                return visitor.visitChildren(self)




    def helper(self):

        localctx = MT22Parser.HelperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_helper)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MT22Parser.ID)
                self.state = 139
                self.match(MT22Parser.COMMA)
                self.state = 140
                self.helper()
                self.state = 141
                self.match(MT22Parser.COMMA)
                self.state = 142
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.basecase()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = MT22Parser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vartype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING) | (1 << MT22Parser.AUTO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic_type" ):
                return visitor.visitAtomic_type(self)
            else:
                return visitor.visitChildren(self)




    def atomic_type(self):

        localctx = MT22Parser.Atomic_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atomic_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idlist)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(MT22Parser.ID)
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraydecl(self):
            return self.getTypedRuleContext(MT22Parser.ArraydeclContext,0)


        def arrayinit(self):
            return self.getTypedRuleContext(MT22Parser.ArrayinitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = MT22Parser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.arraydecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.arrayinit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arrayParam(self):
            return self.getTypedRuleContext(MT22Parser.ArrayParamContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydecl" ):
                return visitor.visitArraydecl(self)
            else:
                return visitor.visitChildren(self)




    def arraydecl(self):

        localctx = MT22Parser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arraydecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.idlist()
            self.state = 162
            self.match(MT22Parser.COLON)
            self.state = 163
            self.arrayParam()
            self.state = 164
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayinitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def arrayParam(self):
            return self.getTypedRuleContext(MT22Parser.ArrayParamContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def arraylit(self):
            return self.getTypedRuleContext(MT22Parser.ArraylitContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayinit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayinit" ):
                return visitor.visitArrayinit(self)
            else:
                return visitor.visitChildren(self)




    def arrayinit(self):

        localctx = MT22Parser.ArrayinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arrayinit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.idlist()
            self.state = 167
            self.match(MT22Parser.COLON)
            self.state = 168
            self.arrayParam()
            self.state = 169
            self.match(MT22Parser.EQ)
            self.state = 170
            self.arraylit()
            self.state = 171
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def arrayVal(self):
            return self.getTypedRuleContext(MT22Parser.ArrayValContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit
